--- a/src/components/ContactList/Contact.module.css
+++ b/src/components/ContactList/Contact.module.css
@@ -1,11 +1,14 @@
 .contacts {
   display: flex;
-  border: solid;
+  border: 0.5px solid #ccc;
+  border-radius: 12px;
   padding: 15px;
   align-items: center;
   justify-content: space-between;
   max-width: 300px;
   gap: 5px;
+  box-shadow: hsla(220, 30%, 5%, 0.05) 0px 5px 15px 0px,
+    hsla(220, 25%, 10%, 0.05) 0px 15px 35px -5px;
 }
 .descr {
   display: flex;
@@ -13,4 +16,20 @@
 }
 .inner {
   width: 200px;
+}
+
+.btn {
+  border-radius: 8px;
+  padding: 6px 16px;
+  background-color: hsl(220, 35%, 3%);
+  background-image: linear-gradient(
+    to bottom,
+    hsl(220, 20%, 25%),
+    hsl(220, 30%, 6%)
+  );
+  box-shadow: inset 0 1px 0 hsl(220, 20%, 35%),
+    inset 0 -1px 0 1px hsl(220, 0%, 0%);
+  border: 1px solid hsl(220, 20%, 25%);
+  color: white;
+  cursor: pointer;
 }
