--- a/src/components/RegistrationForm/RegistratonForm.module.css
+++ b/src/components/RegistrationForm/RegistratonForm.module.css
@@ -1,25 +1,37 @@
 .form {
   display: flex;
   flex-direction: column;
-  max-width: 300px;
+  gap: 16px;
+  width: 400px;
+  padding: 25px;
   border-radius: 8px;
-  padding: 16px;
+
   box-shadow: hsla(220, 30%, 5%, 0.05) 0px 5px 15px 0px,
     hsla(220, 25%, 10%, 0.05) 0px 15px 35px -5px;
 }
-.error {
-  color: red;
-  font-size: 0.875rem;
-  margin-top: 0.25rem;
-}
-.formContainer {
+.container {
   display: flex;
   justify-content: center;
 }
-
+.label {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.checkboxLabel {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.radioLabel {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
 .input {
   font-size: 16px;
-  padding: 5px 8px;
+  padding: 5px 10px;
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #f5f5f5;
@@ -27,8 +39,12 @@
   padding: 8px 12px;
 }
 
+.errorMessage {
+  color: red;
+  font-size: 14px;
+  font-weight: 600;
+}
 .button {
-  margin-top: 15px;
   border-radius: 12px;
   padding: 6px 16px;
   background-color: hsl(220, 35%, 3%);
@@ -41,5 +57,4 @@
     inset 0 -1px 0 1px hsl(220, 0%, 0%);
   border: 1px solid hsl(220, 20%, 25%);
   color: white;
-  cursor: pointer;
 }
