--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,8 +1,17 @@
-.input{
-    display: flex;
-    flex-direction: column;
+.input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 15px;
 }
-.input_main{
-    max-width: 300px;
-    margin-bottom: 15px;
+.input_main {
+  max-width: 300px;
+  margin-bottom: 15px;
+  font-size: 16px;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f5f5f5;
+
+  padding: 8px 10px;
 }
